--- a/main.css
+++ b/main.css
@@ -1,13 +1,20 @@
 ul {
   list-style: none;
 }
+
 .invader {
   width: 30px;
   height: auto;
 }
 
-.invader1 {
+#invader1 {
   position: absolute;
   top: 0;
   left: 0;
+}
+
+#invader2 {
+  position: absolute;
+  top: 0;
+  left: 50px;
 }
